[BE] fix: 행정동 및 상권지역 관련 geotools를 이용한 좌표 변환 리팩토링 진행